# CMDParser

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  args_types.hpp
args_parse/: CMakeLists.txt  abstract_arg.hpp  args.cpp  args.hpp  args_error.hpp  args_types.cpp  args_types.hpp  args_validator.cpp  args_validator.hpp  multi_arg.hpp  single_arg.hpp  user_types.hpp  utils.cpp  utils.hpp
args_types/: CMakeLists.txt  args_types.cpp  args_types.hpp
demo/: CMakeLists.txt  main.cpp
directory_and_pool/: CMakeLists.txt  directory_file.cpp  directory_file.hpp  executor.hpp  thread_pool.cpp  thread_pool.hpp
main/: CMakeLists.txt  main.cpp
scan_directory/: CMakeLists.txt  main.cpp
test/: main.cpp
